main functionalities completed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,12 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "./src",
+    "paths": {
+      "@shared/*": ["app/shared/*"],
+      "@auth/*": ["app/modules/auth/*"],
+      "@modules/*": ["app/modules/*"],
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
